# QuadRotor

./: README.md  environment.yaml  requirements.txt
ros2_ws/: mujoco_bridge.py  quadrotor.xml
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/quadrotor_bringup/share/quadrotor_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/quadrotor_bringup/share/quadrotor_bringup/launch/: simulation.launch.py
ros2_ws/install/quadrotor_msgs/share/quadrotor_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros2_ws/install/quadrotor_msgs/share/quadrotor_msgs/msg/: DroneState.idl  (+8 more)
ros2_ws/install/quadrotor_nodes/lib/quadrotor_nodes/: controller_node  estimator_node  trajectory_node
ros2_ws/install/quadrotor_nodes/share/quadrotor_nodes/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/quadrotor_bringup/: package.xml  setup.py
ros2_ws/src/quadrotor_bringup/launch/: simulation.launch.py
ros2_ws/src/quadrotor_msgs/: CMakeLists.txt
ros2_ws/src/quadrotor_msgs/msg/: DroneControl.msg
ros2_ws/src/quadrotor_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/quadrotor_nodes/quadrotor_nodes/: controller_node.py  estimator_node.py  trajectory_node.py
src/Controllers/: MAP_CONFIGS.py  cbf.py  fly_path_cbf.py  geometric_controller.py  lidar.py  rtaa_star.py  ukf.py
src/quadrotor_description/models/: quadrotor_cbf.xml  quadrotor_corridor.xml  quadrotor_gates.xml  quadrotor_spiral.xml
(+74 files in other folders)
