<?xml version="1.0"?>
<package format="3">
  <name>quadrotor_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for quadrotor simulation</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>quadrotor_nodes</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rosbridge_server</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
